--- a/PS2/style.css
+++ b/PS2/style.css
@@ -4,7 +4,8 @@ body{
     box-sizing: border-box;
     font-family: Arial, sans-serif;
 background: linear-gradient(to bottom, #0A0F1E, #000000);
-    
+        width: 100%;
+    height: 100%;
 }
 .pagination {
   display: flex;
@@ -204,4 +205,5 @@ grid-template-columns: repeat(6, 1fr);
 
 .main-content.show {
     opacity: 1;
+
 }
