--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ header {
     background: linear-gradient(to bottom, #002aa8, #ffffff 160%);
     text-align: center;
     color: white;
-    font-size: 16px;
+    font-size: larger;
     border-radius: 10px;
     margin: 10px;
 }
@@ -91,3 +91,4 @@ header {
     font-size: 24px;
     margin: 0;
 }
+
