--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ button {
     margin: 10px;
     padding: 5px;
     font-size: 18px;
-    background: linear-gradient(to top, #2802ff, #000000);
+    background: linear-gradient(to top, #2802ff, #e4e2e2);
     color: white;
     border: none;
     border-radius: 5px;
@@ -91,4 +91,5 @@ header {
     font-size: 24px;
     margin: 0;
 }
+
 
