--- a/style.css
+++ b/style.css
@@ -44,12 +44,27 @@ button:hover {
     transition: transform 0.3s ease;
 }
 
+
+h1{
+    background: linear-gradient(to bottom, #002aa8, #ffffff 160%);
+    text-align: center;
+    color: white;
+    text-shadow: #000000 2px 2px 4px;
+    padding: 20px;
+    font-size: 24px;
+    background-color: #3650b8;
+border-radius: 10px;
+margin: 10px;
+display: fixed;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 header {
     position: relative;
     background: linear-gradient(to bottom, #002aa8, #ffffff 160%);
     text-align: center;
     color: white;
-    font-size: larger;
+    font-size: 36px;
     border-radius: 10px;
     margin: 10px;
 }
@@ -91,5 +106,6 @@ header {
     font-size: 24px;
     margin: 0;
 }
+
 
 
