--- a/Main/style.css
+++ b/Main/style.css
@@ -1,3 +1,38 @@
+body{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+background: linear-gradient(to bottom, #0A0F1E, #000000);
+    width: 100%;
+    height: 100%;
+}
+
+h1{
+    background: linear-gradient(to bottom, #002aa8, #ffffff 160%);
+    text-align: center;
+    color: white;
+    text-shadow: #000000 2px 2px 4px;
+    padding: 20px;
+    font-size: 24px;
+    background-color: #3650b8;
+border-radius: 10px;
+margin: 10px;
+display: fixed;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+header {
+    position: relative;
+    background: linear-gradient(to bottom, #002aa8, #ffffff 160%);
+    text-align: center;
+    color: white;
+    font-size: 36px;
+    border-radius: 10px;
+    margin: 10px;
+}
+
+
 @media (max-width:630px){
 
 
@@ -60,29 +95,6 @@ img.land {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease;
 
-}
-h1{
-    background: linear-gradient(to bottom, #002aa8, #ffffff 160%);
-    text-align: center;
-    color: white;
-    text-shadow: #000000 2px 2px 4px;
-    padding: 20px;
-    font-size: 24px;
-    background-color: #3650b8;
-border-radius: 10px;
-margin: 10px;
-display: fixed;
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-header {
-    position: relative;
-    background: red;
-    text-align: center;
-    color: white;
-    font-size: 36px;
-    border-radius: 10px;
-    margin: 10px;
 }
 
 div.fullBody{
@@ -167,36 +179,13 @@ img.land {
 
 }
 
-h1{
-    background: linear-gradient(to bottom, #002aa8, #ffffff 160%);
-    text-align: center;
-    color: white;
-    text-shadow: #000000 2px 2px 4px;
-    padding: 20px;
-    font-size: 24px;
-    background-color: #3650b8;
-border-radius: 10px;
-margin: 10px;
-display: fixed;
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-header {
-    position: relative;
-    background: red;
-    text-align: center;
-    color: white;
-    font-size: 36px;
-    border-radius: 10px;
-    margin: 10px;
-}
-
   
 }
 
 body{
 background: linear-gradient(to bottom, #0A0F1E, #000000);
 }
+
 
 
 
